--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     }
   },
   "scripts": {
+    "lint": "eslint .",
     "test": "jest --verbose",
     "test:watch": "npm run test -- --watchAll",
     "start": "webpack-dev-server --hot --mode development --devtool eval-source-map",
